--- a/css/ebi-global-drupal.css
+++ b/css/ebi-global-drupal.css
@@ -9,9 +9,9 @@
 .button-group li a.button.secondary:hover { background: #333; color: #fff; }
 
 /* Don't underline active tabs, or highligh active trails */
-#local-masthead nav ul li a.active {border-bottom: none;background: #fff;color: #333;}
-#local-masthead ul li.active-trail a.active { background: none; color: #fff; font-weight: 400; border-right: 1px solid #fff; }
-#local-masthead ul li.active a.active { background: #fff; color: #333; font-weight: 600; border-right: none; }
+.masthead nav ul li a.active {border-bottom: none;background: #fff;color: #333;}
+.masthead ul li.active-trail a.active { background: none; color: #fff; font-weight: 400; border-right: 1px solid #fff; }
+.masthead ul li.active a.active { background: #fff; color: #333; font-weight: 600; border-right: none; }
 
 /* Pad top of content */
 main.row { margin-top: .5rem; }
