--- a/css/theme-ebi-industry.css
+++ b/css/theme-ebi-industry.css
@@ -43,9 +43,9 @@ a.tag:hover { color: #fff; }
   color: #fff;
   background: #666; }
 
-div#local-masthead { background-color: rgb(0,134,180); }
+div.masthead { background-color: rgb(0,134,180); }
 
 /* Menu hover triangle colour */
-#local-masthead nav ul#global-nav.menu li a:hover:after { border-bottom-color: rgb(0,134,180); }
+.masthead nav ul#global-nav.menu li a:hover:after { border-bottom-color: rgb(0,134,180); }
 
 /* end */
