--- a/css/theme-light.css
+++ b/css/theme-light.css
@@ -2,7 +2,7 @@
   Colour palette: Light
   This theme is based off theme-embl-petrol.css but notably adds the section:
   "white on light masthead stlying"
-  to allow for a local-masthead menu that is dark text on white.
+  to allow for a masthead menu that is dark text on white.
   For more background, see: https://github.com/ebiwd/EBI-Framework/issues/34
 */
 
@@ -48,13 +48,13 @@ a.tag:hover { color: #fff; }
   color: #fff;
   background: #666; }
 
-div#local-masthead {background-color: #eee;}
+div.masthead {background-color: #eee;}
 
 /* white on light masthead stlying */
-#local-masthead nav ul.menu li { border-right-color: #EEE; }
-#local-masthead h1, #local-masthead h4, #local-masthead p, #local-masthead a,
-#local-masthead .masthead .menu > li > a { color: #666; }
-#local-masthead .masthead .menu > li > a:hover { color: rgb(0,124,130); }
-#local-masthead .masthead .menu > li.active-trail > a { background: rgb(0,124,130);; color: #fff }
+.masthead nav ul.menu li { border-right-color: #EEE; }
+.masthead h1, .masthead h4, .masthead p, .masthead a,
+.masthead .masthead-inner .menu > li > a { color: #666; }
+.masthead .masthead-inner .menu > li > a:hover { color: rgb(0,124,130); }
+.masthead .masthead-inner .menu > li.active-trail > a { background: rgb(0,124,130);; color: #fff }
 
 /* end */
