--- a/css/theme-template.css
+++ b/css/theme-template.css
@@ -44,6 +44,6 @@ a.tag:hover { color: #fff; }
   color: #fff;
   background: #666; }
 
-div#local-masthead { background-color: rgb(0,124,130); }
+div.masthead { background-color: rgb(0,124,130); }
 
 /* end */
