Update mobile menu icon display ( #73 )

--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -276,7 +276,7 @@ a:active {
 
       /* make icon bar smaller for mobile */
       > li > a > img,
-      > li > a > i {
+      > li > a:before {
         display: block;
         margin: 0 auto 0.25rem;
         font-size: 16px;
