--- a/css/foundation/_settings-common.scss
+++ b/css/foundation/_settings-common.scss
@@ -63,6 +63,7 @@
 @import 'libraries/foundation-6/scss/global';
 @import 'css/ebi-global-includes/ebi_theme_settings'; // override foundation with EBI styling
 @import 'css/ebi-global-includes/badge'; // custom badge class
+@import 'css/ebi-global-includes/pagination'; // custom badge class
 @import 'css/ebi-global-includes/ebi_visibility'; // extra visibility classes
 @import 'css/ebi-global-includes/ebi_foundation_overides';
 
@@ -101,7 +102,7 @@
 @import 'libraries/foundation-6/scss/components/menu-icon';
 @import 'libraries/foundation-6/scss/components/off-canvas';
 @import 'libraries/foundation-6/scss/components/orbit';
-@import 'libraries/foundation-6/scss/components/pagination';
+// @import 'libraries/foundation-6/scss/components/pagination'; // EBI override
 @import 'libraries/foundation-6/scss/components/progress-bar';
 @import 'libraries/foundation-6/scss/components/reveal';
 @import 'libraries/foundation-6/scss/components/slider';
