--- a/libraries/foundation-6/css/foundation-extras.css
+++ b/libraries/foundation-6/css/foundation-extras.css
@@ -1309,7 +1309,8 @@ select {
 
 .pagination {
   margin-left: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  text-align: center; }
   .pagination::before, .pagination::after {
     display: table;
     content: ' '; }
@@ -1337,7 +1338,7 @@ select {
   .pagination .current {
     padding: 0.1875rem 0.625rem;
     background: #007c82;
-    color: foreground(#007c82);
+    color: #fefefe;
     cursor: default; }
   .pagination .disabled {
     padding: 0.1875rem 0.625rem;
